// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionIcon renders a coloured Claimed transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Claimed"
    class="distribution"
    src="/img/icons/activity/Claimed.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Claimed with commission transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Claimed with commission"
    class="distribution"
    src="/img/icons/activity/Claimed.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Create transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Create"
    class="staking"
    src="/img/icons/activity/Create.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Deposit transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Deposit"
    class="governance"
    src="/img/icons/activity/Deposit.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Edit validator transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Edit validator"
    class="staking"
    src="/img/icons/activity/Edit.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Received transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Received"
    class="banking"
    src="/img/icons/activity/Received.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Restaked transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Restaked"
    class="staking"
    src="/img/icons/activity/Restaked.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Sent transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Sent"
    class="banking"
    src="/img/icons/activity/Sent.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Staked transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Staked"
    class="staking"
    src="/img/icons/activity/Staked.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Submitted xxx proposal transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Submitted xxx proposal"
    class="governance"
    src="/img/icons/activity/Submitted.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Unjail transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Unjail"
    class="staking"
    src="/img/icons/activity/Unjail.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Unstaked transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Unstaked"
    class="staking"
    src="/img/icons/activity/Unstaked.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Update withdraw address transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Update withdraw address"
    class="distribution"
    src="/img/icons/activity/Claimed.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Voted xxx transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Voted xxx"
    class="governance"
    src="/img/icons/activity/Voted.svg"
  />
</div>
`;
